# language_sandbox

./: .gitattributes  .gitmodules  README.md
golang/: go.mod
golang/add/: add.go  add_test.go
golang/async_await/: async_await.go  async_await_test.go
golang/defer/: close_test.go  defer_test.go
golang/sort/: sort_test.go
golang/thread_resource/: event.go  event_test.go
golang/tuple/: tuple.go  tuple_test.go
nodejs/: .eslintrc.json  README.md  jest.config.js  package-lock.json  package.json
nodejs/src/: add.test.ts  add.ts  add_promise.test.ts  add_promise.ts  context_manager.test.ts  fs_temp.test.ts  fs_temp.ts  index.ts  pathlib.test.ts  range.test.ts  range.ts  sleep.test.ts  sleep.ts
proto/: foo.proto
python_sandbox/: pyproject.toml
python_sandbox/python_sandbox/: user_class.py
python_sandbox/tests/: asyncio_test.py  inspect_test.py  mock_test.py
python_sandbox/tests/gof/: abstract_factroy_test.py  adapter_test.py  builder_test.py  commander_test.py  factory_test.py  observer_test.py  state_test.py
pytorch_sandbox/: .gitignore  pyproject.toml  setup.cfg
pytorch_sandbox/pytorch_sandbox/: gpu_test.py  grad_test.py  janken.py  test_boston.py  test_iris.py  test_janken.py  test_mnist.py  utils.py
react/todo_apps/: .eslintrc.json  README.md  package-lock.json  package.json  tsconfig.json
react/todo_apps/src/: App.tsx  index.tsx
rust/: Cargo.toml  lint.bash
rust/async_await/: Cargo.toml
rust/async_await/src/: main.rs
rust/async_file_io/: Cargo.toml
rust/async_file_io/src/: lib.rs
rust/axum_project/: Cargo.toml
rust/axum_project/src/: main.rs
rust/collections/: Cargo.toml
rust/collections/src/: iter.rs  lib.rs  vec.rs
rust/context_manager/: Cargo.toml
rust/context_manager/src/: lib.rs
rust/file_io/: Cargo.toml
rust/file_io/src/: lib.rs
rust/function/: Cargo.toml
rust/function/src/: lib.rs
rust/gof/: Cargo.toml
rust/gof/src/: abstract_factory.rs  adapter.rs  commander.rs  factory.rs  lib.rs  observer.rs
rust/grpc/: Cargo.toml  build.rs
rust/grpc/src/: lib.rs  main.rs
rust/pathlib/: Cargo.toml
rust/pathlib/src/: lib.rs
rust/random/: Cargo.toml
rust/random/src/: lib.rs
rust/raytracing/: .gitignore  Cargo.toml
rust/raytracing/src/: camera.rs  color.rs  degree.rs  hittable.rs  main.rs  material.rs  rand.rs  ray.rs  sphere.rs  vec3.rs  world.rs
rust/sleep/: Cargo.toml
rust/sleep/src/: lib.rs
rust/threading/: Cargo.toml
rust/web_server/: Cargo.toml
rust/web_server/src/: config.rs  main.rs
(+10 files in other folders)
