[tool.poetry]
name = "pytorch_sandbox"
version = "0.1.0"
description = ""
authors = ["curekoshimizu"]

[tool.poetry.dependencies]
python = ">=3.8,<=3.10"
torchviz = "^0.0.2"
torch = "^1.11.0"
numpy = "^1.22.4"
sklearn = "^0.0"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.950"
pytest = "^6.2.1"
ipdb = "^0.13.4"

[tool.black]
line-length = 120
# target-version = ["py38"]

[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
force_single_line = false
include_trailing_comma = true
known_first_party = ["pytorch_sandbox"]
line_length = 120
multi_line_output = 3
use_parentheses = true
