[package]
name = "axum_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.22.0", features = ["full"] }
utoipa = { version = "4.0.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
