[package]
name = "grpc"
version = "0.1.0"
authors = ["curekoshimizu <shugo@manabe.mail-box.ne.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic        = "0.4.1"
bytes        = "1.0.1"
prost        = "0.7.0"
prost-derive = "0.7.0"
tokio = { version = "1.4", features = ["full"] }

[build-dependencies]
tonic-build  = "0.4.1"
