[package]
name = "web_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix-rt = "2.2"
log = "0.4.0"
env_logger = "0.8.3"
serde = "1.0.117"
serde_json = "1.0.59"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.4", features = ["full"] }
httpmock = "0.5"
